<resources>
    <string name="app_name">WWU App</string>

    <string name="menu_welcome">Welcome</string>
    <string name="menu_welcome_title">Welcome to WWU</string>
    <string name="menu_administration">Student Administration</string>
    <string name="menu_administration_title">Student Administration</string>
    <string name="menu_news">News</string>
    <string name="menu_News_title">News</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_calendar_title">Calendar</string>
    <string name="menu_directory">Directory</string>
    <string name="menu_directory_title">Directory</string>
    <string name="menu_map">WWU Map</string>
    <string name="menu_map_title">WWU Map</string>
    <string name="menu_dining">Dining</string>
    <string name="menu_dining_title">Dining</string>
    <string name="menu_library">Library</string>
    <string name="menu_library_title">ULB Library</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_title">App Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_about_title">About this App</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_feedback_title">Feedback</string>

    <string name="action_settings">Settings</string>
    <string name="action_browser">Browser</string>
    <string name="action_map">Map</string>
    <string name="action_list">List</string>

    <string name="action_list_contact_result">List Individual</string>
    <string name="action_go_back">Go Back</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="department_fragment">The Department of Information Systems was founded in 1990 as part of the Münster School of Business and Economics (MSBE). More than 175 persons work at the department; there are seven professors, about 75 staff members and about 100 student assistants. Modern hardware and software facilities are available. The department is responsible for the Wirtschaftsinformatik bachelor program and the Information Systems master program in english language. Every year up to 100 students finish their studies to work in different sectors as consultants, software project managers, information managers, information system and organization designers etc. In application oriented research and development projects we connect business concepts with modern information and communication techniques to obtain holistic solutions. In cooperation with companies and associations we implement research results. The department provides consulting in designing of operational IT application and process organization.</string>
    <string name="department_fragment_prof_list">The department is represented by the following professors:</string>
    <string name="welcome_fragment"><b>Welcome to the Münster School of Business and Economics</b>\n \n To navigate through the app, swipe in the main menu from the left or tap on the home icon.</string>

    <string name="button_send">Next</string>
    <string name="button_setDefaultText">Set default to Max Mustermann</string>

    <string name="result_first_name">First name:&#160;</string>
    <string name="result_last_name">Last name:&#160;</string>
    <string name="result_email">Email address:&#160;</string>
    <string name="result_message">Entered message:&#160;</string>

    <string name="button_sendAsEmail">Send email</string>
    <string name="button_backToSendMessage">Edit</string>

    <string name="default_first_name">Max</string>
    <string name="default_last_name">Mustermann</string>
    <string name="default_email">max.mustermann@gmail.de</string>
    <string name="default_message">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <string name="welcome_info_feedback_form">To provide feedback on this app, please use the form below:</string>
    <string name="edit_first_name"><b>First name</b></string>
    <string name="edit_last_name"><b>Last name</b></string>
    <string name="edit_email"><b>Email address</b></string>
    <string name="edit_email_incorrect">Incorrect email address, please retry</string>
    <string name="edit_email_incorrect_title">Incorrect email input</string>
    <string name="edit_message"><b>Enter your message</b></string>

    <string name="error_oncreate_ContactResultFragmentActivity">onCreate error</string>

    <string name="contact_email_subject">Message from WWU app</string>
    <string name="email_chooser">Send email ...</string>

    <string name="contact_result_fragment_activity">Your message</string>
    <string name="browser_default_address">https://www.google.de</string>
    <string name="title_activity_maps">Leonardo Campus</string>
    <string name="title_activity_list">List</string>

    <string name="google_maps_key">AIzaSyAkzBgzJB-xmqD4xcJU7cyfP4WxHdohy7Y</string>
    <string name="campus_show_map">Show on map</string>
    <string name="campus_address">Leonardo-Campus 3, 48149 Münster</string>

    <!-- Expandable list group items -->
    <string-array name="group_list_items_array">
        <item>Employees</item>
        <item>Building</item>
        <item>Machinery</item>
        <item>Process Flow</item>
        <item>Customs</item>
        <item>Emergency Measures</item>
    </string-array>

    <!-- Expandable list child items | group 1 -->
    <string-array name="group_list_child_item_array_1">
        <item>Security Training</item>
        <item>Work Experience</item>
        <item>Educational Level</item>
        <item>Career Path</item>
        <item>Customs</item>
        <item>Other...</item>
    </string-array>

    <!-- Expandable list child items | group 2 -->
    <string-array name="group_list_child_item_array_2">
        <item>Security Data</item>
        <item>Emergency Installations</item>
        <item>Other...</item>
    </string-array>

    <!-- Expandable list child items | group 3 -->
    <string-array name="group_list_child_item_array_3">
        <item>Maintenance</item>
        <item>Emergency Installations</item>
        <item>Other...</item>
    </string-array>

    <!-- Expandable list child items | group 4 -->
    <string-array name="group_list_child_item_array_4">
        <item>Efficiency</item>
        <item>Effectiveness</item>
        <item>Interruptions</item>
        <item>Other...</item>
    </string-array>

    <!-- Expandable list child items | group 5 -->
    <string-array name="group_list_child_item_array_5">
        <item>Equipment</item>
        <item>Training</item>
        <item>Other...</item>
    </string-array>

    <!-- Expandable list child items | group 6 -->
    <string-array name="group_list_child_item_array_6">
        <item>Installations</item>
        <item>Training</item>
        <item>Update Intervals</item>
        <item>Other...</item>
    </string-array>

</resources>
