<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ContactResultActivity">

    <item android:id="@+id/action_go_back_contact_result"
        android:icon="@drawable/ic_action_back"
        android:title="@string/action_go_back"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings_contact_result"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_browser_contact_result"
        android:title="@string/action_browser"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map_contact_result"
        android:title="@string/action_map"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list_contact_result"
        android:title="@string/action_list_contact_result"
        android:orderInCategory="400"
        app:showAsAction="never" />
</menu>

